<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical" >

    <include layout="@layout/view_simple_custom_header_2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                style="@style/text_style_15_8e8e8e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:text="@string/activity_abnormal_order_case" />

            <RadioGroup
                android:id="@+id/activity_abnormal_order_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/activity_abnormal_order_radio_lost"
                    style="@style/CustomRightRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_abnormal_order_radio_lost" />

                <RadioButton
                    android:id="@+id/activity_abnormal_order_cargo"
                    style="@style/CustomRightRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_abnormal_order_radio_cargo" />

                <RadioButton
                    android:id="@+id/activity_abnormal_order_address_error"
                    style="@style/CustomRightRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_abnormal_order_address_error" />

                <RadioButton
                    android:id="@+id/activity_abnormal_order_phone_error"
                    style="@style/CustomRightRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_abnormal_order_phone_error" />

                <RadioButton
                    android:id="@+id/activity_abnormal_order_no_one_sign"
                    style="@style/CustomRightRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_abnormal_order_no_one_sign" />
            </RadioGroup>

            <TextView
                style="@style/text_style_15_8e8e8e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/activity_abnormal_order_case_other" />

            <EditText
                android:id="@+id/activity_abnormal_order_input_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:background="@drawable/selector_text_input_line"
                android:gravity="top"
                android:hint="@string/activity_abnormal_order_other_reason_tips"
                android:padding="5dp"
                android:paddingTop="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color_hint"
                android:textCursorDrawable="@null" >
            </EditText>

            <Button
                android:id="@+id/activity_abnormal_order_btn_ok"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/selector_btn_bg"
                android:text="@string/ok" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>