<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/c_242a39"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="invisible" >

        <Button
            android:id="@+id/activity_login_btn_goback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:background="@drawable/selector_go_back"
            android:focusable="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/activity_login_txt_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="35sp" />
    </FrameLayout>

    <ImageView
        android:id="@+id/activity_login_img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/logo_login" />

    <TextView
        android:id="@+id/activity_login_txt_company"
        style="@style/text_style_20_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/app_logo_name"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/activity_login_input_user_name"
                style="@style/text_style_15_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:background="@drawable/selector_text_input_line"
                android:hint="@string/login_user_name_tips"
                android:paddingBottom="@dimen/edit_text_padding_bottom"
                android:paddingLeft="@dimen/edit_text_padding_left_right"
                android:paddingRight="@dimen/edit_text_padding_left_right"
                android:singleLine="true"
                android:textColorHint="@color/c_c4c4c4"
                android:textCursorDrawable="@null" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/activity_login_input_password"
                style="@style/text_style_15_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_text_input_line"
                android:hint="@string/login_password_tips"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/edit_text_padding_bottom"
                android:paddingLeft="@dimen/edit_text_padding_left_right"
                android:paddingRight="@dimen/edit_text_padding_left_right"
                android:singleLine="true"
                android:textColorHint="@color/c_c4c4c4"
                android:textCursorDrawable="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/activity_home_txt_forgot_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:text="@string/login_forgot_password"
                android:textColor="#7f7f7f" />
        </LinearLayout>

        <Button
            android:id="@+id/activity_login_btn_ok"
            style="@style/text_style_15_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_bg"
            android:enabled="false"
            android:text="@string/login_ok_btn" />
    </LinearLayout>

</LinearLayout>