<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="14dp"
        android:layout_marginLeft="14dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/shape_corners_solid_white_rect"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/change_portrait_dialog_txt_camera"
                style="@style/text_style_15_black"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_change_portrait_text_bg"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/change_portrait_dialog_take_photo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/c_ddf1f1f1" />

            <TextView
                android:id="@+id/change_portrait_dialog_txt_dicm"
                style="@style/text_style_15_black"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_change_portrait_text_bg"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/change_portrait_dialog_select_photo" />
        </LinearLayout>

        <TextView
            android:id="@+id/change_portrait_dialog_txt_cancle"
            style="@style/text_style_15_black"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/selector_change_portrait_text_bg"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>