<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_e6e6e6"
    android:orientation="vertical" >

    <include layout="@layout/view_simple_custom_header_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/activity_change_pwd_txt_new_pwd"
            style="@style/text_style_15_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:layout_marginBottom="20dp"
            android:paddingBottom="@dimen/edit_text_padding_bottom"
            android:paddingLeft="@dimen/edit_text_padding_left_right"
            android:paddingRight="@dimen/edit_text_padding_left_right"
            android:background="@drawable/selector_text_input_line"
            android:hint="@string/change_password_new_pwd"
            android:textColorHint="@color/text_color_hint"
            android:textCursorDrawable="@null" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/activity_change_pwd_txt_retype"
            style="@style/text_style_15_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:paddingBottom="@dimen/edit_text_padding_bottom"
            android:paddingLeft="@dimen/edit_text_padding_left_right"
            android:paddingRight="@dimen/edit_text_padding_left_right"
            android:background="@drawable/selector_text_input_line"
            android:hint="@string/change_password_retype"
            android:textColorHint="@color/text_color_hint"
            android:textCursorDrawable="@null" />

        <Button
            android:id="@+id/activity_change_pwd_confirm"
            style="@style/text_style_15_black"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/selector_btn_bg"
            android:text="@string/change_password_confirm" />
    </LinearLayout>

</LinearLayout>